# name: TestQuery.test_event_property_filter
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE and(equals(team_id, 111), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_event_property_filter.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE and(equals(team_id, 111), equals(replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''), 'test_val3'), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_event_property_filter.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE and(equals(team_id, 111), ilike(replaceRegexpAll(JSONExtractRaw(properties, 'path'), '^"|"$', ''), '%/%'), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_event_property_filter_materialized
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         "mat_key",
         'a%sd',
         concat(event, ' ', "mat_key")
  FROM events
  WHERE and(equals(team_id, 112), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_event_property_filter_materialized.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         "mat_key",
         'a%sd',
         concat(event, ' ', "mat_key")
  FROM events
  WHERE and(equals(team_id, 112), equals("mat_key", 'test_val3'), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_event_property_filter_materialized.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         "mat_key",
         'a%sd',
         concat(event, ' ', "mat_key")
  FROM events
  WHERE and(equals(team_id, 112), ilike("mat_path", '%/%'), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_hogql_property_filter
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE and(equals(team_id, 113), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_hogql_property_filter.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE and(equals(team_id, 113), equals('a%sd', 'foo'), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_hogql_property_filter.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE and(equals(team_id, 113), equals('a%sd', 'a%sd'), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_hogql_property_filter.3
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE and(equals(team_id, 113), equals(replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''), 'test_val2'), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_hogql_property_filter_materialized
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         "mat_key",
         'a%sd',
         concat(event, ' ', "mat_key")
  FROM events
  WHERE and(equals(team_id, 114), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_hogql_property_filter_materialized.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         "mat_key",
         'a%sd',
         concat(event, ' ', "mat_key")
  FROM events
  WHERE and(equals(team_id, 114), equals('a%sd', 'foo'), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_hogql_property_filter_materialized.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         "mat_key",
         'a%sd',
         concat(event, ' ', "mat_key")
  FROM events
  WHERE and(equals(team_id, 114), equals('a%sd', 'a%sd'), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_hogql_property_filter_materialized.3
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         "mat_key",
         'a%sd',
         concat(event, ' ', "mat_key")
  FROM events
  WHERE and(equals(team_id, 114), equals("mat_key", 'test_val2'), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_person_property_filter
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE and(equals(team_id, 116), equals(replaceRegexpAll(JSONExtractRaw(person_properties, 'email'), '^"|"$', ''), 'tom@posthog.com'), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_select_hogql_expressions
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE and(equals(team_id, 117), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_select_hogql_expressions.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT tuple(uuid, event, properties, timestamp, team_id, distinct_id, elements_chain, created_at, person_id, person_created_at, person_properties),
         event
  FROM events
  WHERE and(equals(team_id, 117), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_select_hogql_expressions.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT count(*),
         event
  FROM events
  WHERE and(equals(team_id, 117), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  GROUP BY event
  LIMIT 101
  OFFSET 0
  '
---
# name: TestQuery.test_select_hogql_expressions.3
  '
  /* user_id:0 request:_snapshot_ */
  SELECT count(*),
         event
  FROM events
  WHERE and(equals(team_id, 117), or(equals(event, 'sign up'), like(replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''), '%val2')), less(timestamp, '2020-01-10 12:14:05.000000'), greater(timestamp, '2020-01-09 12:00:00.000000'))
  GROUP BY event
  ORDER BY count(*) DESC, event ASC
  LIMIT 101
  OFFSET 0
  '
---
